Settings: "Security & location" -> "Security & privacy"
Change-Id: Ie4a4315b2ddb7cc959d184d442dbce518827e824
Signed-off-by: Joey <joey@lineageos.org>

--- a/res/values/mcd_strings.xml
+++ b/res/values/mcd_strings.xml
@@ -240,4 +240,5 @@
     <string name="privacy_guard_advanced_settings_title">Advanced</string>
     <string name="privacy_guard_notification_title">Show notification</string>
 
+    <string name="security_privacy_settings_title">Security &amp; privacy</string>
 </resources>
