--- a/res/xml/security_settings_password.xml
+++ b/res/xml/security_settings_password.xml
@@ -28,10 +28,11 @@
             android:summary="@string/unlock_set_unlock_mode_password"
             settings:keywords="@string/keywords_lockscreen" />
 
-        <org.candy.candyshop.preference.SystemSettingSwitchPreference
+        <com.xtended.xtensions.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_quick_unlock_control"
             android:title="@string/unlock_quick_unlock_control_title"
-            android:summary="@string/unlock_quick_unlock_control_summary" />
+            android:summary="@string/unlock_quick_unlock_control_summary"
+            android:defaultValue="false" />
 
         <Preference android:key="lockscreen_preferences"
             android:title="@string/lockscreen_settings_title"
