--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -317,7 +317,7 @@
     <string name="xtended_update_settings_summary">Check available update</string>
 
     <!-- Density category -->
-    <string name="density_category">Density options</string>
+    <string name="density_category">Font options</string>
 
     <!-- Selinux -->
     <string name="selinux_status">SELinux status</string>
@@ -585,5 +585,9 @@
     <string name="app_ops_labels_write_external_storage">Write to external storage</string>
     <string name="app_ops_labels_write_mms">Write an MMS message</string>
     <string name="app_ops_labels_write_sms">Write SMS</string>
+
+    <!-- Font picker -->
+    <string name="font_picker_title">Font</string>
+    <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
 
 </resources>
