Add Font preference for font manager
Change-Id: If46236d3f6db3a16d9885cdd9e4fc9278fbec412

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -274,4 +274,7 @@
     <string name="ambient_display_bottom_info_battery">Battery percent</string>
     <string name="ambient_display_bottom_info_weather">Brief weather info</string>
 
+    <!-- Font picker -->
+    <string name="font_picker_title">Font</string>
+
 </resources>
