--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -97,6 +97,11 @@
         android:key="density"
         android:title="@string/developer_smallest_width" />
 
+    <com.android.settings.display.FontDialogPreference
+        android:key="custom_font"
+        android:title="@string/font_picker_title"
+        android:persistent="false" />
+
     <Preference
         android:key="screensaver"
         android:title="@string/screensaver_settings_title"
