--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -22,11 +22,26 @@
     <PreferenceCategory
             android:title="@string/ambient_display_category_triggers">
 
-        <SwitchPreference
-            android:key="ambient_display_always_on"
-            android:title="@string/doze_always_on_title"
-            android:summary="@string/doze_always_on_summary" />
+    <Preference
+        android:key="ambient_display_custom"
+        android:title="@string/ambient_display_screen_title" >
+        <intent
+            android:action="com.android.settings.action.EXTRA_SETTINGS"
+            android:targetPackage="com.custom.ambient.display"
+            android:targetClass="com.custom.ambient.display.DozeSettings" />
+    </Preference>
 
+    <SwitchPreference
+        android:key="ambient_display_always_on"
+        android:title="@string/doze_always_on_title"
+        android:summary="@string/doze_always_on_summary" />
+
+    <SwitchPreference
+        android:key="ambient_display_notification"
+        android:title="@string/doze_title"
+        android:summary="@string/doze_summary" />
+
+        <!--
         <Preference
             android:key="ambient_display_double_tap"
             android:title="@string/ambient_display_title"
@@ -36,6 +51,7 @@
             android:key="ambient_display_pick_up"
             android:title="@string/ambient_display_pickup_title"
             android:fragment="com.android.settings.gestures.PickupGestureSettings" />
+        -->
 
     </PreferenceCategory>
     <PreferenceCategory 
@@ -61,10 +77,5 @@
         android:key="ambient_doze_auto_brightness"
         android:title="@string/ambient_doze_auto_brightness_title"
         android:summary="@string/ambient_doze_auto_brightness_summary" />
-
-    <SwitchPreference
-        android:key="ambient_display_notification"
-        android:title="@string/doze_title"
-        android:summary="@string/doze_summary" />
 
 </PreferenceScreen>
