--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -38,6 +38,7 @@
 
     <SwitchPreference
         android:key="ambient_display_notification"
+        android:dependency="ambient_display_always_on"
         android:title="@string/doze_title"
         android:summary="@string/doze_summary" />
 
@@ -60,6 +61,7 @@
  
         <com.xtended.xtensions.preferences.SystemSettingSwitchPreference 
             android:key="ambient_display_show_battery" 
+            android:dependency="ambient_display_always_on"
             android:title="@string/ambient_display_show_battery_icon" 
             android:summary="@string/ambient_display_show_battery_icon_summary" 
             android:defaultValue="true"/> 
@@ -75,6 +77,7 @@
 
     <SwitchPreference
         android:key="ambient_doze_auto_brightness"
+        android:dependency="ambient_display_always_on"
         android:title="@string/ambient_doze_auto_brightness_title"
         android:summary="@string/ambient_doze_auto_brightness_summary" />
 
