--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -77,6 +77,12 @@
         settings:keywords="@string/keywords_color_mode" />
 
     <Preference
+	android:key="screen_stabilization"
+	android:title="@string/screen_stabilization_title"
+	android:layout="@layout/preference_stabilization"
+	android:fragment="com.android.settings.custom.ScreenStabilization" />
+
+    <Preference
         android:key="font_size"
         android:title="@string/title_font_size"
         android:fragment="com.android.settings.accessibility.ToggleFontSizePreferenceFragment"
