--- a/res/xml/screen_stabilization.xml
+++ b/res/xml/screen_stabilization.xml
@@ -20,7 +20,7 @@
     android:layout="@layout/preference_stabilization"
     android:title="@string/screen_stabilization_title">
     
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+    <com.xtended.xtensions.preferences.SystemSettingSwitchPreference
 	android:key="stabilization_enable"
 	android:title="@string/screen_stabilization_enable"
 	android:summary="@string/screen_stabilization_enable_summary"
