Let's Correct the Looks of Screen Stablization Menus

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -247,6 +247,7 @@
 
     <!-- Screen Stabilization -->
     <string name="screen_stabilization_title">Screen Stabilization</string>
+    <string name="screen_stabilization_summary">Screen Stabilization Menus</string>
     <string name="screen_stabilization_enable">Enable Screen Stabilization</string>
     <string name="screen_stabilization_enable_summary">Leave the below values as is if you don\'t understand what they mean.</string>
     <string name="stabilization_velocity_friction_title">Velocity friction</string>
