--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -47,13 +47,23 @@
     <string name="xtended_about_info_summary_title">Know Us!</string>
     <string name="xtended_info_summary">Xtended Project is a ROM based on GZOSP and we are trying to take the better to the level best in coming future.</string>
     <string name="devs_header">Core Dev Team</string>
-    <string name="maintainers_header">Helping Hands and Testers</string>
+    <string name="testing_header">Helping Hands and Testers</string>
+    <string name="thanks_header">Special Thanks to These Devs</string>
     <string name="dev_1">MadhuSudhan Painoori aka Mady51</string>
     <string name="dev1_description">Kernel Developer, The OS Boot Manager</string>
     <string name="dev_2">Santosh Jha aka SuperDroidBond</string>
     <string name="dev2_description">Base Developer, The U-I Changer </string>
     <string name="dev_3">Mukesh Singh aka mukesh22584</string>
     <string name="dev3_description">Customizations Developer, The Cherry-Picker</string>
+    <string name="dev_4">Dhanush Krishanan aka Ded_Boi</string>
+    <string name="dev4_description">Feature Manager, The Code Puller</string>
+    <string name="dev_5">Honza aka svandasek</string>
+    <string name="dev5_description">Graphics Organiser, The Image Factory</string>
+    <string name="spt_1">ZeNiXxX</string>
+    <string name="spt_2">SKULSHADY</string>
+    <string name="spt_3">HolyAngel</string>
+    <string name="spt_4">NoSpamDan</string>
+    <string name="spt_5">Rituj Beniwal</string>
     <string name="hht_1">Babloo aka Babloo289</string>
     <string name="hht_2">Dhairya Chandarana aka Dhairya</string>
     <string name="hht_3">Priyankar Sharma aka ps_minky16</string>
