--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -96,7 +96,7 @@
     <string name="volume_steps_7" translatable="false">7</string>
     <string name="volume_steps_5" translatable="false">5</string>
 
-    <string name="link_volume_option_title">Unlink Ring and Notification Volume</string>
+    <string name="link_volume_option_title">Link Ring and Notification Volume</string>
 
 	<!-- Liquid Lounge -->
     <string name="xtensions_title">Xtended Options</string>
