--- a/res/values/xtended_arrays.xml
+++ b/res/values/xtended_arrays.xml
@@ -252,5 +252,18 @@
         <item>12000</item>
         <item>16000</item>
     </string-array>
+
+    <!-- Ambient Display Bottom info -->
+    <string-array name="ambient_display_bottom_info_entries" translatable="false">
+        <item>@string/ambient_display_bottom_info_off</item>
+        <item>@string/ambient_display_bottom_info_battery</item>
+        <item>@string/ambient_display_bottom_info_weather</item>
+    </string-array>
+
+    <string-array name="ambient_display_bottom_info_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     
 </resources>
