--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -241,7 +241,7 @@
     <string name="ambient_doze_auto_brightness_summary">Use last screen-on adaptive brightness value for Ambient Display or Lift to Wake screen</string> 
 
     <!-- Doze battery options --> 
-    <string name="ambient_display_show_battery_cat">Battery Status</string> 
+    <string name="ambient_display_show_battery_cat">AOD Customization</string> 
     <string name="ambient_display_show_battery_icon">Enable</string> 
     <string name="ambient_display_show_battery_icon_summary">Show battery indicator during pulse</string> 
     <string name="ambient_display_show_battery_percent">Percent</string> 
@@ -266,5 +266,12 @@
 
     <!-- Running services -->
     <string name="background_processes_settings_title">Background processes</string>
+
+    <!-- Ambient display bottom info -->
+    <string name="ambient_display_bottom_info_title">Ambient Display bottom view</string>
+    <string name="ambient_display_bottom_info_summary">Enable to show information on the bottom while dozing</string>
+    <string name="ambient_display_bottom_info_off">Disabled</string>
+    <string name="ambient_display_bottom_info_battery">Battery percent</string>
+    <string name="ambient_display_bottom_info_weather">Brief weather info</string>
 
 </resources>
