--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -276,6 +276,7 @@
 
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
+    <string name="font_picker_toast">Please wait, applying fonts.</string>
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
 
 </resources>
