--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -587,7 +587,8 @@
     <string name="app_ops_labels_write_sms">Write SMS</string>
 
     <!-- Font picker -->
-    <string name="font_picker_title">Font</string>
+    <string name="font_picker_title">Font Manager</string>
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
+    <string name="font_picker_progress">Applying your desired font\u2026</string>
 
 </resources>
