--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -422,5 +422,127 @@
    <string name="data_usage_app_restrict_data_summary">Enable usage of cellular data</string>
    <string name="data_usage_app_restrict_wifi">Wi\u2011Fi data</string>
    <string name="data_usage_app_restrict_wifi_summary">Enable usage of Wi\u2011Fi data</string>
+
+    <!-- System Profiles -->
+    <string name="sp_profiles_settings_title">System profiles</string>
+    <string name="sp_profiles_settings_summary">Management of system profiles</string>
+    <string name="sp_profile_tabs_wifi">Wi\u2011Fi</string>
+    <string name="sp_profile_tabs_bluetooth">Bluetooth</string>
+    <string name="sp_profile_tabs_nfc">NFC</string>
+    <string name="sp_profile_setup_setup_triggers_title">Step 1: Add triggers</string>
+    <string name="sp_profile_setup_setup_triggers_title_config">Modify triggers: <xliff:g id="profile_name">%1$s</xliff:g></string>
+    <string name="sp_profile_profile_manage">Manage profile</string>
+    <string name="sp_profile_name_title">Name</string>
+    <string name="sp_profile_triggers_header">Triggers which will activate this profile</string>
+    <string name="sp_wireless_networks_settings_title">Wireless &amp; networks</string>
+    <string name="sp_profile_volumeoverrides_title">Volume overrides</string>
+    <string name="sp_profile_system_settings_title">System settings</string>
+    <string name="sp_profile_lockmode_title">Lock screen mode</string>
+    <string name="sp_profile_lockmode_policy_disabled_summary">This profile option is disabled by a device administrator policy</string>
+    <string name="sp_profile_app_group_category_title">Notification overrides</string>
+    <string name="sp_profile_menu_delete_title">Delete</string>
+    <string name="sp_profile_menu_add_title">Add</string>
+    <string name="sp_profile_menu_fill_from_state">Import current device settings</string>
+    <string name="sp_profile_setup_actions_description">Now configure what happens when the profile is activated</string>
+    <string name="sp_profile_setup_actions_title">Step 2: Setup actions</string>
+    <string name="sp_profile_populate_profile_from_state">Configure profile using current device settings?</string>
+    <string name="sp_yes">Yes</string>
+    <string name="sp_no">No</string>
+    <string name="sp_cancel">Cancel</string>
+    <string name="sp_finish">Finish</string>
+    <string name="sp_profile_remove_current_profile">Cannot delete current profile!</string>
+    <string name="sp_profile_remove_dialog_message">Remove profile %1$s?</string>
+    <string name="sp_doze_title">Ambient display</string>
+    <string name="sp_notification_light_title">Notification light</string>
+    <string name="sp_profile_airplanemode_title">Airplane mode</string>
+    <string name="sp_ring_mode_title">Ring mode</string>
+    <string name="sp_profile_brightness_title">Screen brightness</string>
+    <string name="sp_rename_dialog_title">Rename</string>
+    <string name="sp_profile_action_none">Leave unchanged</string>
+    <string name="sp_profiles_add">Add</string>
+    <string name="sp_profile_reset_title">Reset</string>
+    <string name="sp_profile_appgroups_title">App groups</string>
+    <string name="sp_new_profile_name">&lt;new profile&gt;</string>
+    <string name="sp_profile_reset_message">Delete all user created profiles and app groups and restore them to default?</string>
+    <string name="sp_profile_settings_summary_off">Profiles are disabled</string>
+    <string name="sp_profile_write_nfc_tag">Write to NFC tag</string>
+    <string name="sp_profile_write_success">Tag successfully written</string>
+    <string name="sp_profile_write_failed">Tag writing failed!</string>
+    <string name="sp_profile_unknown_nfc_tag">Unknown profile</string>
+    <string name="sp_profile_settings_title">Profile</string>
+    <string name="sp_profile_selected">Profile selected: %1$s</string>
+    <string name="sp_rename_dialog_message">Enter a new name</string>
+    <string name="sp_profile_appgroup_name_prompt">Enter a name for the new app group</string>
+    <string name="sp_profile_new_appgroup">New app group</string>
+    <string name="sp_duplicate_appgroup_name">Duplicate app group name!</string>
+    <string name="sp_profile_appgroup_manage">Manage app group</string>
+    <string name="sp_profile_choose_app">Choose app</string>
+    <string name="sp_profile_app_delete_confirm">Remove this app?</string>
+    <string name="sp_profile_delete_appgroup">Delete this app group?</string>
+    <string name="sp_profile_trigger_configure">Configure trigger</string>
+    <string name="sp_profile_action_enable">Turn on</string>
+    <string name="sp_profile_action_disable">Turn off</string>
+    <string name="sp_profile_app_group_item_instructions">Add or remove groups</string>
+    <string name="sp_profile_app_group_item_instructions_summary">Add or remove notification override app groups to this profile</string>
+    <string name="sp_profile_brightness_override_summary">Set to %1$d%%</string>
+    <string name="sp_toggleBluetooth">Bluetooth</string>
+    <string name="sp_toggleData">Data connection</string>
+    <string name="sp_toggle2g3g4g_msim">Preferred network type (%1$s)</string>
+    <string name="sp_toggle2g3g4g">Preferred network type</string>
+    <string name="sp_toggleGPS">GPS</string>
+    <string name="sp_toggleNfc">NFC</string>
+    <string name="sp_toggleSync">Auto-sync data</string>
+    <string name="sp_toggleWifi">Wi\u2011Fi</string>
+    <string name="sp_toggleWifiAp">Portable Wi\u2011Fi hotspot</string>
+    <string name="sp_profile_lockmode_disabled_summary">Disable lock screen</string>
+    <string name="sp_profile_lockmode_insecure_summary">Don\'t ask for PIN or password</string>
+    <string name="sp_profile_action_system">System default</string>
+    <string name="sp_ring_mode_normal">Normal</string>
+    <string name="sp_ring_mode_vibrate">Vibrate</string>
+    <string name="sp_ring_mode_mute">Mute</string>
+    <string name="sp_no_triggers_configured_nfc">Tap to setup a new NFC trigger.</string>
+    <string name="sp_no_triggers_configured">No triggers configured. Tap to add more.</string>
+    <string name="sp_volume_override_summary">Set to %1$s/%2$s</string>
+    <string name="sp_alarm_volume_title">Alarm</string>
+    <string name="sp_media_volume_title">Media</string>
+    <string name="sp_incoming_call_volume_title">Ringtone</string>
+    <string name="sp_notification_volume_title">Notification</string>
+    <string name="sp_profile_trigger_connect">On connect</string>
+    <string name="sp_profile_trigger_disconnect">On disconnect</string>
+    <string name="sp_profile_trigger_notrigger">No trigger</string>
+    <string name="sp_profile_trigger_a2dp_connect">On A2DP connect</string>
+    <string name="sp_profile_trigger_a2dp_disconnect">On A2DP disconnect</string>
+    <string name="sp_no_wifi_triggers">No Wi\u2011Fi access points configured.\nTap to connect Wi\u2011Fi before configuring triggers.</string>
+    <string name="sp_profile_write_touch_tag">Touch tag to write</string>
+    <string name="sp_profile_nfc_text">Writing a profile to a NFC tag allows for tapping the tag to select the profile. Tapping a second time will select the previously selected profile.</string>
+    <string name="sp_no_bluetooth_triggers">No Bluetooth devices paired.\nTap to pair Bluetooth device before configuring triggers.</string>
+    <string name="sp_profile_setup_setup_triggers_description">Please select triggers which will activate this profile</string>
+    <string name="sp_profile_add_nfc_text">This NFC tag refers to an unknown profile. Attaching this NFC tag to an existing profile will allow for selecting the profile in the future.</string>
+    <string name="sp_profile_select">Select profile</string>
+    <string name="sp_settings">Settings</string>
+    <string name="sp_rename_dialog_hint">Enter profile name</string>
+    <string name="sp_profile_appgroup_name_title">Name</string>
+    <string name="sp_profile_applist_title">Apps</string>
+    <string name="sp_profile_brightness_override_checkbox_label">Override brightness</string>
+    <string name="sp_profile_volume_override_checkbox_label">Override volume</string>
+    <string name="sp_on">On</string>
+    <string name="sp_off">Off</string>
+    <string name="sp_profile_empty_list_profiles_off">To configure and use system profiles, turn profiles on.</string>
+    <string name="sp_sound_mode">Notification mode</string>
+    <string name="sp_ringer_mode">Ring mode</string>
+    <string name="sp_lights_mode">Lights mode</string>
+    <string name="sp_vibrate_mode">Vibrate mode</string>
+    <string name="sp_choose_soundtone">Choose notification tone</string>
+    <string name="sp_choose_ringtone">Choose ringtone</string>
+    <string name="sp_ringtone_title">Phone ringtone</string>
+    <string name="sp_ringtone_summary">""</string>
+    <string name="sp_soundtone_title">Notification tone</string>
+    <string name="sp_soundtone_summary" translatable="false">""</string>
+    <string name="sp_profile_settings">Profile settings</string>
+    <string name="sp_loading">Loading\u2026</string>
+    <string name="sp_profile_entries_on">On</string>
+    <string name="sp_profile_entries_off">Off</string>
+    <string name="sp_profile_entries_no_override">No override</string>
+    <string name="profile_select">Select profile</string>
 	
 </resources>
