--- a/res/xml/profiles_settings.xml
+++ b/res/xml/profiles_settings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2017 Flash ROM
+<!-- Copyright (C) 2012 The CyanogenMod Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -12,17 +14,13 @@
      limitations under the License.
 -->
 
-<resources>
-    <style name="Theme.SmartBar.Dialog" parent="@*android:style/Theme.DeviceDefault.Light.Dialog.Alert" />
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:key="profiles_settings"
+    android:title="@string/sp_profiles_settings_title" >
 
-    <style name="LockPatternSizeHeaderStyle" parent="android:style/TextAppearance.Material.Subhead">
-        <item name="android:paddingTop">16dp</item>
-        <item name="android:textColor">@color/primary_dark_material_light</item>
-	<item name="android:lineSpacingMultiplier">1.2</item>
-    </style>
-
-    <style name="TabAppTheme" parent="Theme.AppCompat">
-    </style>
-
-</resources>
-
+    <com.xtended.xtensions.preferences.SystemSettingSwitchPreference
+        android:key="system_profiles_enabled"
+        android:title="@string/sp_on"
+        android:disableDependentsState="true"/>
+</PreferenceScreen>
