--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -49,6 +49,10 @@
     <string name="devs_header">Core Dev Team</string>
     <string name="testing_header">Helping Hands and Testers</string>
     <string name="thanks_header">Special Thanks to These Devs</string>
+    <string name="xtended_gplus">Official G+ Community</string>
+    <string name="xtended_gplus_summary">Join here to learn more</string>
+    <string name="xtended_telegram">Official Telegram Support Group</string>
+    <string name="xtended_telegram_summary">Join Here for Instant Support</string>
     <string name="dev_1">MadhuSudhan Painoori aka Mady51</string>
     <string name="dev1_description">Kernel Developer, The OS Boot Manager</string>
     <string name="dev_2">Santosh Jha aka SuperDroidBond</string>
@@ -59,6 +63,19 @@
     <string name="dev4_description">Feature Manager, The Code Puller</string>
     <string name="dev_5">Honza aka svandasek</string>
     <string name="dev5_description">Graphics Organiser, The Image Factory</string>
+    <string name="devices_header">Officially Supported Devices</string>
+    <string name="device_1">OnePlus 5T | dumpling</string>
+    <string name="device1_description">Mukesh Singh aka mukesh22584</string>
+    <string name="device_2">OnePlus 5 | cheeseburger</string>
+    <string name="device2_description">Traian Simedru aka simedrut | Mukesh Singh aka mukesh22584</string>
+    <string name="device_3">OnePlus 3 Unified | oneplus3, oneplus3t</string>
+    <string name="device3_description">Santosh Jha aka SuperDroidBond</string>
+    <string name="device_4">Xiaomi Redmi Note 4 | mido</string>
+    <string name="device4_description">Oveno Senpai aka TSG756</string>
+    <string name="device_5">Lenovo Zuk Z2 | zuk2</string>
+    <string name="device5_description">Ananwoy Nandi aka ananwoy</string>
+    <string name="device_6">Xiaomi Redmi 3S | land</string>
+    <string name="device6_description">Ronak aka RonAk47</string>
     <string name="spt_1">ZeNiXxX</string>
     <string name="spt_2">SKULSHADY</string>
     <string name="spt_3">HolyAngel</string>
