--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -23,6 +23,13 @@
                 android:enabled="false"
                 android:layout="@layout/xtended_about" />
 
+        <!-- Xtended changelog -->
+        <PreferenceScreen
+                android:key="xtended_changelog"
+                android:title="@string/changelog_xtended_title"
+                android:summary="@string/changelog_xtended_summary"
+                android:fragment="com.android.settings.xtended.XtendedChangelog" />
+
         <!-- System update settings - launches activity -->
         <Preference android:key="additional_system_update_settings"
                     android:title="@string/additional_system_update_settings_list_item_title">
