DO NOT RESUSCITATE!!
I'm kidding with the title of this commit but this fixes an issue where
the wrong url was seen while using other languages other than 'merican aka
English :p

Instead of changing the url for 4500 different languages every release,
we'll just do what we should of done from the start and tag it to not be
translated it, leave it blank in case a mofo dares and overlay it in vendor.

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -575,7 +575,8 @@
     <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
 
     <!-- Security dialog -->
-    <string name="aosp_security_bulletin_url">https://source.android.com/security/bulletin/2018-04-01</string>
+    <!-- DO NOT TRANSLATE -->
+    <string name="aosp_security_bulletin_url" translatable="false"></string>
     <string name="security_dialog_title">Security updates</string>
     <string name="security_dialog_neutral_button">AOSP Security Bulletins</string>
     <string name="android_security_title">AOSP security patch level</string>
