--- a/res/xml/xtended_info.xml
+++ b/res/xml/xtended_info.xml
@@ -105,104 +105,12 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </Preference>
     </PreferenceCategory>
     <PreferenceCategory
-            android:key="xtended_device_maintainers"
-            android:title="@string/devices_header" >
-        <Preference
-            android:title="@string/device_1"
-            android:summary="@string/device1_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/oneplus-5t/development/msm-xtended-oreoandroid-8-1-t3754938" />
-        </Preference>
-	<Preference
-            android:title="@string/device_2"
-            android:summary="@string/device2_description"
-	    android:icon="@drawable/ic_devs_phone">
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/oneplus-5/development/stable-msm-xtended-t3761012" />
-        </Preference>
-	<Preference
-            android:title="@string/device_3"
-            android:summary="@string/device3_description"
-	    android:icon="@drawable/ic_devs_phone">
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/oneplus-3/oneplus-3--3t-cross-device-development/cardinal-aosp-5-0-android-8-0-pre-t3693585" />
-        </Preference>
-	<Preference
-            android:title="@string/device_4"
-            android:summary="@string/device4_description"
-	    android:icon="@drawable/ic_devs_phone">
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/redmi-note-4/xiaomi-redmi-note-4-snapdragon-roms-kernels-recoveries--other-development/8-1-0-project-xtended-t3758581" />
-        </Preference>
-	<Preference
-            android:title="@string/device_5"
-            android:summary="@string/device5_description"
-	    android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/lenovo-zuk-z2/development/rom-project-xtended-t3781995" />
-        </Preference>
-	<Preference
-            android:title="@string/device_7"
-            android:summary="@string/device7_description"
-	    android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/redmi-4a/development/rom-project-xtended-xiaomi-redmi-4a-t3784935" />
-       </Preference>
-        <Preference
-            android:title="@string/device_8"
-            android:summary="@string/device8_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/moto-g5s-plus/development/rom-xtended-rom-t3791439" />
-       </Preference>
-        <Preference
-            android:title="@string/device_9"
-            android:summary="@string/device9_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/g5-plus/development/rom-project-xtended-t3792113" />
-       </Preference>
-       <Preference
-            android:title="@string/device_6"
-            android:summary="@string/device6_description"
-	    android:icon="@drawable/ic_devs_phone">
-       <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/xiaomi-redmi-3s/development/rom-project-msm-xtended-t3798669" />
-       </Preference>
-       <Preference
-            android:title="@string/device_10"
-            android:summary="@string/device10_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/le-max-2/development/rom-project-xtended-shakeme-t3794392" />
-       </Preference>
-       <Preference
-            android:title="@string/device_11"
-            android:summary="@string/device11_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/mi-max-2/development/stable-msm-xtended-v2-5-t3805375" />
-        </Preference>
-        <Preference
-            android:title="@string/device_12"
-            android:summary="@string/device12_description"
-            android:icon="@drawable/ic_devs_phone" >
-        <intent
-            android:action="android.intent.action.VIEW"
-            android:data="https://forum.xda-developers.com/redmi-note-5/development/rom-project-xtended-t3805938" />
-        </Preference>
+	    android:title="@string/devices">
+         <Preference
+             android:key="xtended_devices"
+	     android:title="@string/devices_title"
+             android:summary="@string/devices_summary"
+             android:fragment="com.android.settings.xtended.XtendedDevices"/>
     </PreferenceCategory>
 </PreferenceScreen>
 
