--- a/res/layout/dialog_firmware_version.xml
+++ b/res/layout/dialog_firmware_version.xml
@@ -25,6 +25,16 @@
         android:layout_height="match_parent"
         android:padding="@dimen/sim_content_padding">
 
+        <ImageView
+    	    android:layout_width="match_parent"
+    	    android:layout_height="75dp"
+    	    android:src="@drawable/ic_xtended_about"
+       	    android:tint="?android:attr/colorAccent"
+       	    android:gravity="center"
+    	    android:scaleType="centerInside"
+            android:selectable="false"
+            android:adjustViewBounds="true" />
+
         <TextView
             style="@style/device_info_dialog_label"
             android:id="@+id/firmware_version_label"
@@ -86,6 +96,5 @@
             android:id="@+id/build_number_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
     </LinearLayout>
 </ScrollView>
