Bring back selinux version
This commit reverts the commit below
https://github.com/DirtyUnicorns/android_packages_apps_Settings/commit/b255b3a6ed4dbda26eb649767134e038045254a3

- Adapted to P

This includes the work previously done by Fan Zhang <zhfan@google.com> since it was introduced in 2012.

Change-Id: Ic371a9ef0055b559eb0b6ff2791291fb82e408cf

--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -179,6 +179,14 @@
         android:key="clang_version"
         android:order="45"
         android:title="@string/clang_version"
-        android:summary="@string/clang_version_default" />
+	android:summary="@string/clang_version_default" />
+
+    <!-- SELinux status information -->
+    <Preference
+        android:key="selinux_status"
+        android:order="99"
+        android:title="@string/selinux_status"
+        android:summary="@string/selinux_status_enforcing"
+        android:selectable="false"/>
 
 </PreferenceScreen>
