Battery: show battery temp on power summary
Change-Id: Ica7d426eebb0789e1f707822ad6fd7ce8a6c946b
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -602,4 +602,6 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 
+    <string name="battery_temp">Battery temperature</string>
+
 </resources>
