All About Xtended -: 1) Added Official Devices List 2) Clean up Credits Section 3) Add more testers of core team 4) Replace About Phone headers with our Logo

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -63,19 +63,19 @@
     <string name="device_3">OnePlus 3 Unified | oneplus3, oneplus3t</string>
     <string name="device3_description">Santosh Jha aka SuperDroidBond</string>
     <string name="device_4">Xiaomi Redmi Note 4 | mido</string>
-    <string name="device4_description">Oveno Senpai aka TSG756</string>
-    <string name="device_5">Lenovo Zuk Z2 | zuk2</string>
-    <string name="device5_description">Ananwoy Nandi aka ananwoy</string>
+    <string name="device4_description">Sagar aka sagar.rokade.982</string>
+    <string name="device_5">Xiaomi Redmi 4A | rolex</string>
+    <string name="device5_description">Ankan Ghosh aka ankan005</string>
     <string name="device_6">Xiaomi Redmi 3S | land</string>
-    <string name="device6_description">Ronak aka RonAk47</string>
-    <string name="device_7">Xiaomi Redmi 4A | rolex</string>
-    <string name="device7_description">Yousef Algadri</string>
-    <string name="device_8">Moto G5s Plus | sanders</string>
-    <string name="device8_description">Raj aka raj_jdja</string>
-    <string name="device_9">Moto G5 Plus | potter</string>
-    <string name="device9_description">Kaabir aka king.ska</string>
-    <string name="device_10">LeEco Le Max 2 | lemax2</string>
-    <string name="device10_description">Duarte Ornelas aka shake_me</string>
+    <string name="device6_description">Saksham Singh aka Saksham Singh</string>
+    <string name="device_7">Xiaomi Redmi Note 5-5 Plus | vince</string>
+    <string name="device7_description">Raj Kale aka RajKale99</string>
+    <string name="device_8">Xiaomi Mi A1 | tissot</string>
+    <string name="device8_description">Anurag Rai aka anurag rai</string>
+    <string name="device_9">Xiaomi Redmi 4X | santoni</string>
+    <string name="device9_description">Wajid Khan aka wajidkh08</string>
+    <string name="device_10">Moto G5s Plus | sanders</string>
+    <string name="device10_description"> Sai Krishna aka Sai404142</string>
     <string name="device_11">Xiaomi Mi Max 2 | oxygen</string>
     <string name="device11_description">Jayant | Jay_B</string>
     <string name="device_12">Xiaomi Redmi Note 5 - 5 Plus | vince</string>
@@ -116,6 +116,11 @@
     <string name="hht_2">Dhairya Chandarana aka Dhairya</string>
     <string name="hht_3">Priyankar Sharma aka ps_minky16</string>
     <string name="hht_4">All Others Who Tested and Shared Feedback in Testing Group</string>
+    <string name="hht_5">Parikshit Singh aka rishi2603</string>
+    <string name="hht_6">DrUnknownEMC</string>
+    <string name="hht_7">Sushobith aka sushobith</string>
+    <string name="hht_8">gFknQ</string>
+    <string name="hht_9">Sunil Harali</string>
     <string name="translators_header">Translators Credits</string>
     <string name="translator_1">novas78</string>
     <string name="language_1">Czech</string>
