--- a/res/xml/xtended_info.xml
+++ b/res/xml/xtended_info.xml
@@ -104,14 +104,14 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             android:data="https://forum.xda-developers.com/member.php?u=4479268" />
         </Preference>
     </PreferenceCategory>
-    <!--<PreferenceCategory
+    <PreferenceCategory
 	    android:title="@string/devices">
          <Preference
              android:key="xtended_devices"
 	     android:title="@string/devices_title"
              android:summary="@string/devices_summary"
              android:fragment="com.android.settings.xtended.XtendedDevices"/>
-    </PreferenceCategory>-->
+    </PreferenceCategory>
 </PreferenceScreen>
 
 
