--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -603,5 +603,6 @@
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 
     <string name="battery_temp">Battery temperature</string>
+    <string name="build_date">Build date</string>
 
 </resources>
